metadata/force-app/main/default/objects/CustomName_jAoZA__c/CustomName_jAoZA__c.object-meta.xml
<CustomObject>
    <description>Description_lJVIs</description>
    <label>CustomLabel_OxuMm</label>
    <nameField>
        <label>CustomLabel_OxuMm</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_OxuMms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>