metadata/force-app/main/default/objects/CustomName_jAoZA__c/fields/CustomField_jZfzV__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jZfzV__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldudhhP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>