metadata/force-app/main/default/objects/CustomName_jAoZA__c/fields/CustomField_zgzYw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_zgzYw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldKGJaM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>